2004-07-14  Kevin Moule  <krmoule@veil.uwaterloo.ca>

	* src/ShrikeCanvas.cpp (renderObject): Pass in all three
	coordinates of the tangent values.

	* src/shaders/TangentArrows.cpp (render): Pass in all the tangents
	for NormalArrows too.

	* src/shaders/BumpMapShader.cpp: Added this shader.

2004-07-13  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/TangentArrows.cpp (render): Fix a bug, now the z
	component of the tangents actually gets sent. Add a NormalArrows
	shader while we're at it.

	* src/ShrikeFrame.cpp (wireframe): Implemented wireframe support.

	* src/ShrikeFrame.hpp: Added support for wireframe.

	* src/shaders/TexShader.cpp (TexShader): Change name.

	* src/shaders/Derivatives.cpp (Derivatives): Change name.

	* src/shaders/TangentArrows.cpp: Added more complicated tangent
	debugging shader.

	* src/shaders/Tangents.cpp: Added simple tangent debugging shader.

	* src/shaders/Checkerboard.cpp: Compute average colour in the
	shader, made colours static members.

	* src/UniformPanel.cpp: Use previous colour in the colour dialogues.

2004-07-12  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/VertexBranching.cpp: Added better geometry.

2004-07-09  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/VertexBranching.cpp: Added shader to illustrate
	branching in the vertex program. Works on
	NV_vertex_program2_option-capable cards.

	* src/shaders/Checkerboard.cpp: Added this shader.

	* src/shaders/Derivatives.cpp: Added this shader.

2004-07-05  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/util.cpp: Remove refract function.

	* src/util.hpp: Remove refract function.

	* src/utilimpl.hpp: Remove clamp functions.

	* ChangeLog: Clean up the spaces in this file a bit.

	* src/ShrikeFrame.cpp: Implement fragment/vertex program interface
	displays using ShProgramNode::describe_interface().

	* src/ShrikeFrame.hpp: Add functions for viewing fragment/vertex
	program interfaces.
