@@ -1,3 +1,7 @@
+2004-07-14  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
+
+	* src/shaders/FragmentBranching.cpp: Add simple fragment branching demo.
+
 2004-07-14  Kevin Moule  <krmoule@veil.uwaterloo.ca>
 
 	* src/ShrikeCanvas.cpp (renderObject): Pass in all three
